--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "description": "A tool for analyzing Slay the Spire decks",
   "repository": "https://github.com/LandonSchropp/spiralizer",
   "author": "Landon Schropp <schroppl@gmail.com> (https://landonschropp.com)",
-  "license": "MIT",
-  "private": true
+  "license": "UNLICENSED",
+  "private": true,
+  "dependencies": {
+    "parcel-bundler": "^1.12.4"
+  },
+  "scripts": {
+    "serve": "parcel serve --no-cache --out-dir build source/index.njk"
+  }
 }
