--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.1",
+    "@babel/node": "^7.10.1",
+    "@babel/preset-env": "^7.10.1",
+    "@babel/register": "^7.10.1",
     "parcel-bundler": "^1.12.4"
   },
   "scripts": {
