--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   "scripts": {
     "serve": "parcel serve --no-cache --out-dir build source/index.njk",
     "build": "parcel build --no-cache --out-dir build source/index.njk",
-    "deploy": "yarn build && gh-pages -d build"
+    "deploy": "yarn build && gh-pages -d build",
+    "lint": "eslint --max-warnings=0 ."
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.1.0",
+    "eslint-config-optimum-energy": "^0.6.3",
     "gh-pages": "^2.2.0"
   }
 }
