--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@babel/node": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
     "@babel/register": "^7.10.1",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "scripts": {
-    "serve": "parcel serve --no-cache --out-dir build source/index.njk",
-    "build": "parcel build --no-cache --out-dir build source/index.njk",
+    "serve": "parcel serve --no-cache --out-dir build source/index.html",
+    "build": "parcel build --no-cache --out-dir build source/index.html",
     "deploy": "yarn build && gh-pages -d build",
     "lint": "eslint --max-warnings=0 ."
   },
