--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.1.0",
     "eslint-config-optimum-energy": "^0.6.3",
+    "eslint-plugin-react": "^7.20.0",
     "fs-extra": "^9.0.0",
     "gh-pages": "^2.2.0",
     "scrape-it": "^5.2.3"
