--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.20.0",
     "fs-extra": "^9.0.0",
     "gh-pages": "^2.2.0",
+    "import-js": "^4.0.2",
     "scrape-it": "^5.2.3"
   }
 }
