--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/node": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
     "@babel/register": "^7.10.1",
+    "babel-preset-mobx": "^2.0.0",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
