--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@babel/preset-env": "^7.10.1",
     "@babel/register": "^7.10.1",
     "babel-preset-mobx": "^2.0.0",
+    "lodash": "^4.17.15",
+    "mobx": "^5.15.4",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
