--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
-  "presets": [ "@babel/env", "mobx" ]
+  "presets": [
+    "@babel/env"
+  ],
+  "plugins": [
+    [ "@babel/plugin-proposal-decorators", { "legacy": true } ],
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
 
