--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.1",
     "@babel/node": "^7.10.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-decorators": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
     "@babel/register": "^7.10.1",
-    "babel-preset-mobx": "^2.0.0",
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
