--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fs-extra": "^9.0.0",
     "gh-pages": "^2.2.0",
     "import-js": "^4.0.2",
+    "sass": "^1.26.7",
     "scrape-it": "^5.2.3"
   }
 }
