--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.10.1",
     "@babel/register": "^7.10.1",
     "fs-extra": "^9.0.0",
+    "json2csv": "^5.0.1",
     "lodash": "^4.17.15",
     "scrape-it": "^5.2.3"
   },
