--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "fs-extra": "^9.0.0",
     "json2csv": "^5.0.1",
     "lodash": "^4.17.15",
-    "scrape-it": "^5.2.3"
+    "scrape-it": "^5.2.3",
+    "voca": "^1.4.0"
   },
   "scripts": {
     "scrape-cards": "babel-node source/index.js",
